--- a/index.html
+++ b/index.html
@@ -273,7 +273,9 @@
         "
       >
         <div class="text-center">
-          <div>Testimonials</div>
+          <div>
+            <span class="text-5xl font-bold block pb-16">Testimonials</span>
+          </div>
           <div
             class="
               profile-picture
@@ -282,10 +284,13 @@
               bg-no-repeat bg-cover
               rounded-full
               mx-auto
+              mb-12
             "
             style="background: url(./images/mike-muller-127x127.jpg)"
           ></div>
-          <div class="review max-w-4xl">
+          <div
+            class="review max-w-4xl rounded-sm p-12 bg-purple-500 bg-opacity-50"
+          >
             <blockquote>
               <q
                 >Awesome theme with great design and awesome support. If you
@@ -296,9 +301,14 @@
               >
             </blockquote>
           </div>
-          <div class="name">Mike Muller</div>
+          <div class="name text-2xl font-bold pt-10">Mike Muller</div>
         </div>
       </div>
+    </section>
+
+    <!-- SERVICES section  -->
+    <section>
+      <div class="h-96"></div>
     </section>
   </body>
 </html>
