--- a/index.html
+++ b/index.html
@@ -138,11 +138,11 @@
     </header>
 
     <!-- ABOUT section -->
-    <section class="h-96">
+    <section class="h-96 max-w-7xl mx-auto">
       <div class="flex justify-center items-center">
         <div class="text-center my-20">
           <h2 class="text-5xl font-bold text-gray-600">About</h2>
-          <p class="pt-16 px-96 block text-gray-500">
+          <p class="pt-16 px-36 block text-gray-500">
             It is an amazing one-page theme with great features that offers an
             incredible experience. It is easy to install, make changes, adapt
             for your business. A modern design with clean lines and styling for
@@ -307,8 +307,146 @@
     </section>
 
     <!-- SERVICES section  -->
+    <section class="flex justify-center items-center max-w-max mx-auto pb-40">
+      <div class="h-96 mx-auto text-center">
+        <div class="pt-20 pb-20">
+          <h2 class="text-5xl font-bold text-gray-600 pb-5">Services</h2>
+          <p class="block text-gray-500">
+            In order to help you grow your business, our carefully selected
+            experts can advice you in the following areas:
+          </p>
+        </div>
+        <div class="flex justify-around mx-10">
+          <div class="">
+            <div class="icon flex justify-center items-center pb-3">
+              <svg
+                xmlns="http://www.w3.org/2000/svg"
+                class="h-10 w-10 text-red-300"
+                viewBox="0 0 20 20"
+                fill="currentColor"
+              >
+                <path
+                  d="M13.586 3.586a2 2 0 112.828 2.828l-.793.793-2.828-2.828.793-.793zM11.379 5.793L3 14.172V17h2.828l8.38-8.379-2.83-2.828z"
+                />
+              </svg>
+            </div>
+            <h3 class="text-3xl font-bold text-red-300">Web Design</h3>
+            <p class="pt-8 block text-gray-500 px-20">
+              Consectetur adipiscing elit. Praesent molestie urna hendrerit erat
+              tincidunt tempus. Aliquam a leo risus. Fusce a metus non augue
+              dapibus porttitor at in mauris. Pellentesque commodo...
+            </p>
+          </div>
+          <div class="">
+            <div class="icon flex justify-center items-center pb-3">
+              <svg
+                xmlns="http://www.w3.org/2000/svg"
+                class="h-10 w-10 text-yellow-400"
+                fill="none"
+                viewBox="0 0 24 24"
+                stroke="currentColor"
+              >
+                <path
+                  stroke-linecap="round"
+                  stroke-linejoin="round"
+                  stroke-width="2"
+                  d="M10 20l4-16m4 4l4 4-4 4M6 16l-4-4 4-4"
+                />
+              </svg>
+            </div>
+            <h3 class="text-3xl font-bold text-yellow-400">WEB Development</h3>
+            <p class="pt-8 block text-gray-500 px-20">
+              Consectetur adipiscing elit. Praesent molestie urna hendrerit erat
+              tincidunt tempus. Aliquam a leo risus. Fusce a metus non augue
+              dapibus porttitor at in mauris. Pellentesque commodo...
+            </p>
+          </div>
+          <div class="">
+            <div class="icon flex justify-center items-center pb-3">
+              <svg
+                xmlns="http://www.w3.org/2000/svg"
+                class="h-10 w-10 text-purple-800"
+                fill="none"
+                viewBox="0 0 24 24"
+                stroke="currentColor"
+              >
+                <path
+                  stroke-linecap="round"
+                  stroke-linejoin="round"
+                  stroke-width="2"
+                  d="M21 21l-6-6m2-5a7 7 0 11-14 0 7 7 0 0114 0z"
+                />
+              </svg>
+            </div>
+            <h3 class="text-3xl font-bold text-purple-800">SEO Analysis</h3>
+            <p class="pt-8 block text-gray-500 px-20">
+              Consectetur adipiscing elit. Praesent molestie urna hendrerit erat
+              tincidunt tempus. Aliquam a leo risus. Fusce a metus non augue
+              dapibus porttitor at in mauris. Pellentesque commodo...
+            </p>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <!-- Latest News section -->
+
     <section>
-      <div class="h-96"></div>
+      <div>
+        <div>
+          <h2>Latest News</h2>
+          <p>
+            If you are interested in the latest articles in the industry, take a
+            sneak peek at our blog. You have nothing to loose!
+          </p>
+          <button>
+            <svg
+              xmlns="http://www.w3.org/2000/svg"
+              class="h-6 w-6"
+              fill="none"
+              viewBox="0 0 24 24"
+              stroke="currentColor"
+            >
+              <path
+                stroke-linecap="round"
+                stroke-linejoin="round"
+                stroke-width="2"
+                d="M13 9l3 3m0 0l-3 3m3-3H8m13 0a9 9 0 11-18 0 9 9 0 0118 0z"
+              />
+            </svg>
+            <span>See blog</span>
+          </button>
+        </div>
+        <div class="blogs flex">
+          <div>
+            <div class="image"></div>
+            <div class="heading">
+              <h3>We have Made Illdy Theme SEO Friendly</h3>
+              <p>
+                Illdy One Page WordPress theme is fully SEO friendly and is
+                ready to help you to achieve the highest rankings...
+              </p>
+              <div class="button">
+                <svg
+                  xmlns="http://www.w3.org/2000/svg"
+                  class="h-6 w-6"
+                  fill="none"
+                  viewBox="0 0 24 24"
+                  stroke="currentColor"
+                >
+                  <path
+                    stroke-linecap="round"
+                    stroke-linejoin="round"
+                    stroke-width="2"
+                    d="M13 9l3 3m0 0l-3 3m3-3H8m13 0a9 9 0 11-18 0 9 9 0 0118 0z"
+                  />
+                </svg>
+                <span>Read more</span>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
     </section>
   </body>
 </html>
