--- a/index.html
+++ b/index.html
@@ -332,7 +332,7 @@
               </svg>
             </div>
             <h3 class="text-3xl font-bold text-red-300">Web Design</h3>
-            <p class="pt-8 block text-gray-500">
+            <p class="pt-8 block text-gray-500 text-justify">
               Consectetur adipiscing elit. Praesent molestie urna hendrerit erat
               tincidunt tempus. Aliquam a leo risus. Fusce a metus non augue
               dapibus porttitor at in mauris. Pellentesque commodo...
@@ -356,7 +356,7 @@
               </svg>
             </div>
             <h3 class="text-3xl font-bold text-yellow-400">WEB Development</h3>
-            <p class="pt-8 block text-gray-500">
+            <p class="pt-8 block text-gray-500 text-justify">
               Consectetur adipiscing elit. Praesent molestie urna hendrerit erat
               tincidunt tempus. Aliquam a leo risus. Fusce a metus non augue
               dapibus porttitor at in mauris. Pellentesque commodo...
@@ -380,7 +380,7 @@
               </svg>
             </div>
             <h3 class="text-3xl font-bold text-purple-800">SEO Analysis</h3>
-            <p class="pt-8 block text-gray-500">
+            <p class="pt-8 block text-gray-500 text-justify">
               Consectetur adipiscing elit. Praesent molestie urna hendrerit erat
               tincidunt tempus. Aliquam a leo risus. Fusce a metus non augue
               dapibus porttitor at in mauris. Pellentesque commodo...
@@ -392,7 +392,7 @@
 
     <!-- Latest News section -->
 
-    <section class="bg-gray-600 bg-opacity-50">
+    <section class="bg-gray-600 bg-opacity-50 pb-24">
       <div style="width: 80%" class="flex mx-auto">
         <div>
           <div class="text-center">
@@ -442,95 +442,191 @@
 
           <!-- blogs posts -->
           <div class="blogs flex justify-evenly space-x-10">
-            <div>
+            <!-- start of blog 1  -->
+            <div class="bg-white">
               <div
                 class="image h-56 w-full bg-no-repeat bg-cover"
                 style="background-image: url(./images/blog1.jpg)"
               ></div>
-              <a href="#"> <h3>We have Made Illdy Theme SEO Friendly</h3></a>
-              <p>
-                Illdy One Page WordPress theme is fully SEO friendly and is
-                ready to help you to achieve the highest rankings...
-              </p>
-              <div class="button">
-                <svg
-                  xmlns="http://www.w3.org/2000/svg"
-                  class="h-6 w-6"
-                  fill="none"
-                  viewBox="0 0 24 24"
-                  stroke="currentColor"
+              <div class="my-8 mx-8">
+                <a href="#">
+                  <h3 class="text-3xl font-bold pb-3 text-gray-500 pb-10 pt-5">
+                    We have Made Illdy Theme SEO Friendly
+                  </h3></a
                 >
-                  <path
-                    stroke-linecap="round"
-                    stroke-linejoin="round"
-                    stroke-width="2"
-                    d="M13 9l3 3m0 0l-3 3m3-3H8m13 0a9 9 0 11-18 0 9 9 0 0118 0z"
-                  />
-                </svg>
-                <span>Read more</span>
+                <p class="block text-gray-500 pb-14">
+                  Illdy One Page WordPress theme is fully SEO friendly and is
+                  ready to help you to achieve the highest rankings...
+                </p>
+                <div class="button pl-4">
+                  <a href="#">
+                    <div
+                      class="
+                        flex
+                        justify-start
+                        items-center
+                        space-x-2
+                        text-yellow-400
+                        rounded
+                      "
+                    >
+                      <div class="logo">
+                        <svg
+                          xmlns="http://www.w3.org/2000/svg"
+                          class="h-6 w-6 text-yellow-400"
+                          fill="none"
+                          viewBox="0 0 24 24"
+                          stroke="currentColor"
+                        >
+                          <path
+                            stroke-linecap="round"
+                            stroke-linejoin="round"
+                            stroke-width="2"
+                            d="M13 9l3 3m0 0l-3 3m3-3H8m13 0a9 9 0 11-18 0 9 9 0 0118 0z"
+                          />
+                        </svg>
+                      </div>
+                      <div><span>Read More</span></div>
+                    </div></a
+                  >
+                </div>
               </div>
             </div>
-            <div>
+            <!-- end of blog 1 -->
+            <!-- start of blog 2 -->
+            <div class="bg-white">
               <div
                 class="image h-56 w-full bg-no-repeat bg-cover"
                 style="background-image: url(./images/blog2.jpg)"
               ></div>
-              <a href="#">
-                <h3>Stunning One Page WordPress Theme For Masses</h3></a
-              >
-              <p>
-                This theme is not just free, it is free for private and
-                commercial use since it is licensed under GPL…
-              </p>
-              <div class="button h-56 w-full bg-no-repeat bg-cover">
-                <svg
-                  xmlns="http://www.w3.org/2000/svg"
-                  class="h-6 w-6"
-                  fill="none"
-                  viewBox="0 0 24 24"
-                  stroke="currentColor"
+              <div class="my-8 mx-8">
+                <a href="#">
+                  <h3 class="text-3xl font-bold pb-3 text-gray-500 pb-10 pt-5">
+                    Stunning One Page WordPress Theme For Masses
+                  </h3></a
                 >
-                  <path
-                    stroke-linecap="round"
-                    stroke-linejoin="round"
-                    stroke-width="2"
-                    d="M13 9l3 3m0 0l-3 3m3-3H8m13 0a9 9 0 11-18 0 9 9 0 0118 0z"
-                  />
-                </svg>
-                <span>Read more</span>
+                <p class="block text-gray-500 pb-14">
+                  This theme is not just free, it is free for private and
+                  commercial use since it is licensed under GPL…
+                </p>
+                <div class="button pl-4">
+                  <a href="#">
+                    <div
+                      class="
+                        flex
+                        justify-start
+                        items-center
+                        space-x-2
+                        text-yellow-400
+                        rounded
+                      "
+                    >
+                      <div class="logo">
+                        <svg
+                          xmlns="http://www.w3.org/2000/svg"
+                          class="h-6 w-6 text-yellow-400"
+                          fill="none"
+                          viewBox="0 0 24 24"
+                          stroke="currentColor"
+                        >
+                          <path
+                            stroke-linecap="round"
+                            stroke-linejoin="round"
+                            stroke-width="2"
+                            d="M13 9l3 3m0 0l-3 3m3-3H8m13 0a9 9 0 11-18 0 9 9 0 0118 0z"
+                          />
+                        </svg>
+                      </div>
+                      <div><span>Read More</span></div>
+                    </div></a
+                  >
+                </div>
               </div>
             </div>
-            <div>
+
+            <!-- end of blog 2 -->
+
+            <!-- start of blog 3 -->
+
+            <div class="bg-white">
               <div
                 class="image h-56 w-full bg-no-repeat bg-cover"
-                style="background-image: url(./images/blog3.jpg)"
+                style="background-image: url(./images/blog1.jpg)"
               ></div>
-              <a href="#"> <h3>Hello World!</h3></a>
-              <p>
-                Welcome to colorlib.com. This is our first post around Illdy
-                WordPress theme. Now show that you can make out of it.…
-              </p>
-              <div class="button">
-                <svg
-                  xmlns="http://www.w3.org/2000/svg"
-                  class="h-6 w-6"
-                  fill="none"
-                  viewBox="0 0 24 24"
-                  stroke="currentColor"
+              <div class="my-8 mx-8">
+                <a href="#">
+                  <h3 class="text-3xl font-bold pb-3 text-gray-500 pb-10 pt-5">
+                    Hello world!
+                  </h3></a
                 >
-                  <path
-                    stroke-linecap="round"
-                    stroke-linejoin="round"
-                    stroke-width="2"
-                    d="M13 9l3 3m0 0l-3 3m3-3H8m13 0a9 9 0 11-18 0 9 9 0 0118 0z"
-                  />
-                </svg>
-                <span>Read more</span>
+                <p class="block text-gray-500 pb-14">
+                  Welcome to colorlib.com. This is our first post around Illdy
+                  WordPress theme. Now show that you can make out of it.…
+                </p>
+                <div class="button pl-4">
+                  <a href="#">
+                    <div
+                      class="
+                        flex
+                        justify-start
+                        items-center
+                        space-x-2
+                        text-yellow-400
+                        rounded
+                      "
+                    >
+                      <div class="logo">
+                        <svg
+                          xmlns="http://www.w3.org/2000/svg"
+                          class="h-6 w-6 text-yellow-400"
+                          fill="none"
+                          viewBox="0 0 24 24"
+                          stroke="currentColor"
+                        >
+                          <path
+                            stroke-linecap="round"
+                            stroke-linejoin="round"
+                            stroke-width="2"
+                            d="M13 9l3 3m0 0l-3 3m3-3H8m13 0a9 9 0 11-18 0 9 9 0 0118 0z"
+                          />
+                        </svg>
+                      </div>
+                      <div><span>Read More</span></div>
+                    </div></a
+                  >
+                </div>
               </div>
             </div>
+            <!-- end of blog 3 -->
           </div>
         </div>
       </div>
     </section>
+    <!-- end of Latest News Section -->
+
+    <!-- Yellow banner Section  -->
+    <div
+      class="bg-no-repeat h-36 bg-cover bg-center relative"
+      style="background-image: url(./images/front-page-counter.jpg)"
+    >
+      <div
+        class="
+          flex
+          justify-evenly
+          max-w-2xl
+          items-center
+          mx-auto
+          divide-white
+          text-2xl
+          font-bold
+          h-full
+          text-white
+        "
+      >
+        <div class="border-r-2 pr-20">PROJECTS</div>
+        <div class="border-r-2 pr-20">CLIENTS</div>
+        <div>COFFES</div>
+      </div>
+    </div>
   </body>
 </html>
