--- a/index.html
+++ b/index.html
@@ -623,7 +623,9 @@
           text-white
         "
       >
-        <div class="border-r-2 pr-20">PROJECTS</div>
+        <div class="border-r-2 pr-20">
+          <h3>PROJECTS</h3>
+        </div>
         <div class="border-r-2 pr-20">CLIENTS</div>
         <div>COFFES</div>
       </div>
@@ -776,7 +778,7 @@
 
     <!-- Contact Section  -->
 
-    <section style="height: 700px">
+    <section>
       <div class="flex justify-center items-center pt-16">
         <h2 class="text-5xl font-bold text-gray-600 pb-3">Contact Us</h2>
       </div>
@@ -825,6 +827,74 @@
             name="message"
             class="w-full h-56 border bg-gray-50"
           />
+        </div>
+        <div class="button col-start-3 flex justify-end items-center">
+          <span class="bg-yellow-400 py-2 px-16 text-white text-2xl rounded"
+            >Send</span
+          >
+        </div>
+      </div>
+    </section>
+    <!-- end of contact form  -->
+
+    <!-- Footer Section  -->
+
+    <section class="h-96" style="background-color: #292626">
+      <div class="flex justify-around max-w-5xl py-16 text-gray-400 pl-48">
+        <div>
+          <h3 class="text-white font-bold text-2xl pb-6">PRODUCTS</h3>
+          <div class="pb-2 hover:text-purple-800">
+            <a href="#">&#187;&nbsp;&nbsp;Our work</a>
+          </div>
+          <div class="pb-2 hover:text-purple-800">
+            <a href="#">&#187;&nbsp;&nbsp;Club</a>
+          </div>
+          <div class="pb-2 hover:text-purple-800">
+            <a href="#">&#187;&nbsp;&nbsp;News</a>
+          </div>
+          <div class="pb-2 hover:text-purple-800">
+            <a href="#">&#187;&nbsp;&nbsp;Announcement</a>
+          </div>
+        </div>
+        <div>
+          <h3 class="text-white font-bold text-2xl pb-6">INFORMATION</h3>
+          <div class="pb-2 hover:text-purple-800">
+            <a href="#">&#187;&nbsp;&nbsp;Pricing</a>
+          </div>
+          <div class="pb-2 hover:text-purple-800">
+            <a href="#">&#187;&nbsp;&nbsp;Terms</a>
+          </div>
+          <div class="pb-2 hover:text-purple-800">
+            <a href="#">&#187;&nbsp;&nbsp;Affiliates</a>
+          </div>
+          <div class="pb-2 hover:text-purple-800">
+            <a href="#">&#187;&nbsp;&nbsp;Blog</a>
+          </div>
+        </div>
+        <div>
+          <h3 class="text-white font-bold text-2xl pb-6">SUPPORT</h3>
+          <div class="pb-2 hover:text-purple-800">
+            <a href="#">&#187;&nbsp;&nbsp;Documentation</a>
+          </div>
+          <div class="pb-2 hover:text-purple-800">
+            <a href="#">&#187;&nbsp;&nbsp;FAQs</a>
+          </div>
+          <div class="pb-2 hover:text-purple-800">
+            <a href="#">&#187;&nbsp;&nbsp;Forums</a>
+          </div>
+          <div class="pb-2 hover:text-purple-800">
+            <a href="#">&#187;&nbsp;&nbsp;Contact</a>
+          </div>
+        </div>
+      </div>
+      <div
+        class="copyright text-gray-400 flex justify-center items-center h-24"
+        style="background-color: #242121"
+      >
+        <div>
+          Theme by Aayush Ali.<span class="text-white font-bold"
+            >&copy;Copyright 2021. All Rights Reserved.</span
+          >
         </div>
       </div>
     </section>
